<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:foreground="?android:attr/selectableItemBackground"
    card_view:cardBackgroundColor="@color/white"
    card_view:cardCornerRadius="4dp"
    card_view:cardUseCompatPadding="true">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/icon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:src="@drawable/icon_moon" />

        <LinearLayout
            android:id="@+id/check_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@+id/icon"
            android:orientation="vertical"
            tools:ignore="RtlHardcoded">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check_off"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:padding="1dp"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/check_in"
                    android:src="@drawable/time_grey" />

                <TextView
                    android:id="@+id/check_out_time_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="18:32"
                    android:visibility="gone"
                    android:textColor="@color/silver" />
                <TextClock
                    android:id="@+id/check_off_time_tc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:format24Hour="@string/format24"
                    android:gravity="center"
                    android:layout_marginLeft="5dp"
                    android:textColor="@color/silver"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:layout_marginTop="2dp"
                    android:contentDescription="@string/check_in"
                    android:src="@drawable/location_grey" />

                <TextView
                    android:id="@+id/check_off_location_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/fake_location"
                    android:textColor="@color/silver" />
            </LinearLayout>

        </LinearLayout>

        <View
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_below="@+id/check_content"
            android:background="@color/gainsboro" />

        <Button
            android:visibility="gone"
            android:id="@+id/check_off_refresh_btn"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp"
            android:layout_below="@+id/line"
            android:background="@drawable/shape_corners_green_line"
            android:textColor="@color/green"
            android:text="@string/refresh" />
        <Button
            android:id="@+id/check_off_btn"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_below="@+id/line"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/selector_check_btn"
            android:enabled="false"
            android:text="@string/check_in"
            android:visibility="gone"
            android:textColor="@color/white" />
    </RelativeLayout>

</android.support.v7.widget.CardView>